Fixed Share dropdown overflow bug by setting individual overflow CSS separately (y = visible, x = hidden)

--- a/main/static/css/home.css
+++ b/main/static/css/home.css
@@ -12,7 +12,8 @@
 #main-container {
     min-height: 62vh;
     /* will cover the 100% of viewport */
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: visible;
     display: block;
     position: relative;
     padding-bottom: 100px;
